# bad_penny

./: global_config.yml
.obsidian/: workspace.json
bad_penny_vault/: Project Coding Philosophy.md  Project Proposal.md  Project Structure.md  Tools,  Libraries, & Data Sources.md
bad_penny_vault/.obsidian/: workspace.json
bad_penny_vault/Excalidraw/: Timetable.md
rust_backend/: Cargo.toml
rust_backend/src/: config.rs  main.rs
rust_backend/src/ingestion/: ons_api.rs  test.rs
